<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">john.n1998@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="hint_search">Поиск</string>

    <string name="something_went_wrong">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>

    <string name="button_update">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="player_back_button">Назад</string>
    <string name="player_cover">Обложка трека</string>
    <string name="player_add_to_playlist">Добавить в плейлист</string>
    <string name="player_add_to_favorite">Добавить в избранное</string>
    <string name="player_play">Воспроизвести</string>
    <string name="player_pause">Пауза</string>
    <string name="player_default_progress">00:00</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>

    <string name="media_title">Медиатека</string>
    <string name="media_back_button">Назад</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="empty_media_placeholder_content_description">Пустая медиатека</string>

</resources>
