<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker.presentation.media.MediaFragment"
        android:label="@string/media_title" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.presentation.search.SearchFragment"
        android:label="@string/button_search">
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.presentation.settings.SettingsFragment"
        android:label="@string/button_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.practicum.playlistmaker.presentation.player.PlayerFragment"
        android:label="@string/button_search" />

</navigation>
