<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".presentation.media.playlists.PlaylistsFragment">

    <Button
        android:id="@+id/newPlaylistButton"
        style="@style/SearchUpdateButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_new_playlist_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/new_playlist"
        android:textAllCaps="false"
        android:textColor="@color/new_playlist_button_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlistsPlaceholderImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/empty_media_placeholder_content_description"
        android:src="@drawable/ic_nothing_found_120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistButton" />

    <TextView
        android:id="@+id/playlistsPlaceholderText"
        style="@style/SearchTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/playlists_empty"
        android:textSize="@dimen/text_size_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistsPlaceholderImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
