<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/YPBlue"

    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

    <LinearLayout
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_layout_height"
        android:layout_weight="@dimen/main_layout_weight"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_text_margin_start"
            android:text="@string/button_search"
            android:textColor="@color/YPBlack"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_layout_height"
        android:layout_weight="@dimen/main_layout_weight"
        android:layout_marginTop="@dimen/main_layout_margin_top"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_media_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_text_margin_start"
            android:text="@string/button_media"
            android:textColor="@color/YPBlack"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_layout_height"
        android:layout_weight="@dimen/main_layout_weight"
        android:layout_marginTop="@dimen/main_layout_margin_top"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_text_margin_start"
            android:text="@string/button_settings"
            android:textColor="@color/YPBlack"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>